--- a/app/src/main/res/layout/activity_inventario_mb.xml
+++ b/app/src/main/res/layout/activity_inventario_mb.xml
@@ -55,7 +55,7 @@
             android:layout_width="match_parent"
             android:layout_height="65dp"
             android:layout_margin="15dp"
-            android:hint=""
+            android:hint="Seleccionar Filtro"
             app:boxStrokeColor="@color/azul"
             app:hintTextColor="@color/azul">
 
