--- a/app/src/main/res/layout/activity_deshabilitar_producto.xml
+++ b/app/src/main/res/layout/activity_deshabilitar_producto.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Vista.Administrador.GestionProductos.DeshabilitarProductos">
+    tools:context=".Vista.Administrador.GestionProductos.DeshabilitarProducto">
 
     <LinearLayout
         android:id="@+id/linearLayoutDP"
@@ -76,7 +76,6 @@
             android:layout_marginRight="15dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:checked="true"
             android:showText="false"
             android:splitTrack="false"
             android:text="Activo"
