--- a/app/src/main/res/layout/activity_actualizar_productos.xml
+++ b/app/src/main/res/layout/activity_actualizar_productos.xml
@@ -167,12 +167,12 @@
                         />
 
                     <LinearLayout
-                        android:layout_width="150dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
                         <Button
-                            android:id="@+id/btnQUitarMinimaACP"
+                            android:id="@+id/btnQuitarMinimaACP"
                             style="@style/Widget.Material3.Button.TextButton"
                             android:layout_width="50dp"
                             android:layout_height="50dp"
@@ -190,9 +190,9 @@
 
                             <com.google.android.material.textfield.TextInputEditText
                                 android:id="@+id/edtMinimaACP"
-                                android:layout_width="50dp"
+                                android:layout_width="70dp"
                                 android:layout_height="50dp"
-                                android:enabled="false"
+                                android:enabled="true"
                                 android:gravity="clip_horizontal|center_horizontal"
                                 android:inputType="number"
                                 android:text="0"
@@ -231,7 +231,7 @@
                         />
 
                     <LinearLayout
-                        android:layout_width="150dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal">
 
@@ -254,7 +254,7 @@
 
                             <com.google.android.material.textfield.TextInputEditText
                                 android:id="@+id/edtMaximaACP"
-                                android:layout_width="50dp"
+                                android:layout_width="70dp"
                                 android:layout_height="50dp"
                                 android:enabled="false"
                                 android:gravity="clip_horizontal|center_horizontal"
@@ -293,8 +293,7 @@
                     android:layout_width="200dp"
                     android:layout_height="200dp"
                     android:layout_marginLeft="15dp"
-                    android:layout_marginRight="15dp"
-                    android:background="@color/azulVerde">
+                    android:layout_marginRight="15dp">
 
                 </ImageView>
 
