--- a/app/src/main/res/layout/activity_confirmar_detalle_producto.xml
+++ b/app/src/main/res/layout/activity_confirmar_detalle_producto.xml
@@ -131,12 +131,10 @@
 
                             <ImageView
                                 android:id="@+id/ivImagenProductoCDP"
+                                android:layout_width="250dp"
+                                android:layout_height="250dp"
                                 android:layout_gravity="center_horizontal"
-                                android:layout_width="200dp"
-                                android:layout_height="200dp"
-                                android:layout_marginBottom="7dp"
-                                android:background="@color/azulVerde">
-                            </ImageView>
+                                android:layout_marginBottom="7dp" />
                         </LinearLayout>
                     </com.google.android.material.card.MaterialCardView>
 
