--- a/app/src/main/res/layout/cardview_registrar_consumos.xml
+++ b/app/src/main/res/layout/cardview_registrar_consumos.xml
@@ -64,11 +64,12 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="150dp"
+                android:layout_width="160dp"
                 android:layout_height="wrap_content"
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_centerVertical="true"
+                android:layout_marginLeft="3dp"
                 android:orientation="horizontal">
 
                 <Button
